# Sistema-de-Assinatura-Digital

./: .env.example  .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  controllers.py  crypto.py  models.py  routes.py  schemas.py
app/templates/: base.html  enter_password.html  generate_keys.html  home.html  list_documents.html  login.html  register.html  sign_document.html  upload_document.html  verify_document_home.html  view_document.html  view_key.html  view_pdf_document.html
app/templates/auth/: login.html  register.html
app/templates/components/: alerts.html  button.html  document_list.html  footer.html  form_group.html  navbar.html  sidebar.html
app/templates/documents/: list_documents.html  sign_document.html  upload_document.html  view_document.html  view_pdf_document.html
app/templates/keys/: generate_keys.html  view_key.html
app/templates/layouts/: base.html  home.html
app/templates/shared/: enter_password.html  verify_document_home.html
